2008-01-22  Tor Lillqvist  <tml@novell.com>

	* gconf-zip.in: Look for catalogs in share/locale first, as that
	is where they will be with a properly built GNU gettext.

	* gconf/gconf-internals.c: Map pipe() to _pipe() on Win32.

2008-01-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump to 2.21.3 after release.

================================= 2.21.2 ============================

2008-01-10  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/evoldap-backend.c: (parse_server_info),
	(destroy_source):
	* backends/markup-tree.c: (markup_entry_set_value):
	* backends/xml-dir.c: (create_fs_dir):
	* backends/xml-entry.c: (entry_destroy), (entry_set_schema_name),
	(entry_set_mod_user):
	* examples/simple-view.c: (main):
	* gconf/gconf-schema.c: (gconf_schema_free), (gconf_schema_copy):
	* gconf/gconf-sources.c: (gconf_sources_query_value):
	* gconf/gconf-value.c: (set_string), (gconf_value_free),
	(gconf_entry_unref), (gconf_entry_set_schema_name):
	* gconf/gconf.c: (gconf_engine_get_string):
	g_free and friends handles NULL just fine.
	Closes bug #371087 reported by Morten Welinder.

2008-01-10  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version
	* backends/xml-dir.c:
	* examples/basic-gconf-app.schemas:
	* examples/simple-controller.c:
	* examples/simple-view.c:
	* gconf/gconf-changeset.c:
	* gconf/gconf.c:
	Mark some functions and variables static.
	Closes bug #142295.

2008-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf-2.0.pc.in: glib-2.0, not glib. Thanks
	To Alex Larsson.

============================= 2.21.1 ===========================0

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update more.
	* doc/gconf/tmpl/gconf-client.sgml: Docs adjustment.
	* gconf-2.0.pc.in: Move orbit-2.0 to Requires.private
	and add glib under Requires instead.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update some.
	* gconf/gconf.c: (gconf_valid_key):
	Fix some more strings. Closes bug #429679.
